--- a/.github/workflows/zhuimi_signin.yml
+++ b/.github/workflows/zhuimi_signin.yml
@@ -1,1 +1,112 @@
+name: zhuimin签到
 
+on:
+  schedule:
+    - cron: '0 1 * * *'    # 每天 09:00 (UTC+1 → 北京时间 09:00)
+    - cron: '0 5 * * *'    # 每天 13:00 (UTC+5 → 北京时间 13:00)
+  workflow_dispatch:       # 手动触发支持
+
+jobs:
+  check-if-already-signed:
+    runs-on: ubuntu-latest
+    outputs:
+      skip: ${{ steps.check.outputs.skip }}
+    steps:
+      - name: 检出代码
+        uses: actions/checkout@v3
+
+      - name: 恢复签到记录缓存
+        uses: actions/cache@v4
+        with:
+          path: .last_success_date
+          key: last-success-marker
+
+      - name: 判断是否已签到
+        id: check
+        run: |
+          current_date=$(TZ='Asia/Shanghai' date '+%Y-%m-%d')
+          echo "当前北京时间: $current_date"
+
+          if [ -f .last_success_date ]; then
+            last_date=$(cat .last_success_date)
+            echo "上次签到日期: $last_date"
+            if [ "$last_date" = "$current_date" ]; then
+              echo "今天已成功签到，跳过执行。"
+              echo "skip=true" >> "$GITHUB_OUTPUT"
+              exit 0
+            fi
+          fi
+
+          echo "今天尚未签到，继续执行。"
+          echo "skip=false" >> "$GITHUB_OUTPUT"
+
+  sign-in:
+    needs: check-if-already-signed
+    if: needs.check-if-already-signed.outputs.skip == 'false'
+    runs-on: ubuntu-latest
+    steps:
+      - name: 检出代码
+        uses: actions/checkout@v3
+
+      - name: 随机延迟（早上）
+        if: github.event.schedule == '0 1 * * *'
+        run: |
+          delay=$((RANDOM % 60))
+          echo "早上签到，延迟 $delay 秒..."
+          sleep $delay
+
+      - name: 随机延迟（下午或手动）
+        if: github.event.schedule == '0 5 * * *' || github.event_name == 'workflow_dispatch'
+        run: |
+          delay=$((RANDOM % 30))
+          echo "下午或手动触发，延迟 $delay 秒..."
+          sleep $delay
+
+      - name: 设置 Python 环境
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.x'
+
+      - name: 安装依赖
+        run: pip install requests
+
+      - name: 执行签到脚本前
+        env:
+          USERNAME: ${{ secrets.ZHUIMI_USERNAME }}
+          PASSWORD: ${{ secrets.ZHUIMI_PASSWORD }}
+          TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
+        run: python zhuimi自动签到通知优化版.py
+
+      - name: 标记今天签到成功
+        if: success()
+        run: |
+          date_str=$(TZ='Asia/Shanghai' date '+%Y-%m-%d')
+          echo "$date_str" > .last_success_date
+          echo "已记录成功签到日期: $date_str"
+
+      - name: 保存签到日期到缓存
+        if: success()
+        uses: actions/cache@v4
+        with:
+          path: .last_success_date
+          key: last-success-marker
+
+      - name: 空提交保持活跃（仅定时触发）
+        if: success() && github.event_name == 'schedule'
+        run: |
+          git config --local user.email "${{ github.actor_id }}+${{ github.actor }}@users.noreply.github.com"
+          git config --local user.name "${{ github.actor }}"
+          git remote set-url origin https://${{ github.actor }}:${{ github.token }}@github.com/${{ github.repository }}
+          git pull --rebase --autostash
+          git commit --allow-empty -m "CHORE: 保持运行.."
+          git push
+
+      - name: 清理旧的 Workflow 记录
+        if: always()
+        uses: Mattraks/delete-workflow-runs@main
+        with:
+          token: ${{ github.token }}
+          repository: ${{ github.repository }}
+          retain_days: 0
+          keep_minimum_runs: 60
